HttpClient Module added and Createdd A Student Service For make htttp call

--- a/ApiApp/src/app/navbar/navbar.component.html
+++ b/ApiApp/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                     <a class="nav-link active text-info" aria-current="page" routerLink="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" aria-current="page"  routerLink="/adsf">Link</a>
+                    <a class="nav-link text-info" aria-current="page"  routerLink="/student">Student Api</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
